tests/nightly/function/compile_fail/missing_reason.stderr
error: you need to specify a reason why this precondition holds
 --> $DIR/missing_reason.rs:8:14
  |
8 |     #[assure("must be bar")]
  |              ^^^^^^^^^^^^^
  |
help: add `, reason = "why does this hold?"`
 --> $DIR/missing_reason.rs:8:27
  |
8 |     #[assure("must be bar")]
  |                           ^
